tests/fail/fail_must_yield_i32.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
fn main() -> i32 {
    auto y: i32 = for auto x in [1] {
        // missing pass
        // EXPECT: Yielding for loop body must pass a value
    } or {
        // missing pass
        // EXPECT: Yielding for loop 'or' block must pass a value
    }
    // EXPECT: Cannot initialize variable of type 'i32' with value of type 'void'
    return 0
}
